# ComplexNetworks

./: README.md
results/ph-results/: comments-no-loop-ph.d  flickr.d  phone-skel  phone-skel-ph.d  results.txt  twitter-mentions-skel
tp0/: distribution.sh
tp1/: AUTHORS  Makefile  config.status  configure  configure.ac
tp1/autom4te.cache/: output.0  traces.1
tp1/src/: bfs.h  distance  example.data  graph.c  testconn.sh
tp1/src/.deps/: avg_distance.Po  bfs.Po  compconnexes.Po  connexity.Po  distance.Po  graph.Po  plot.Po
tp1/src/twitter-RT-skel/: Makefile  Makefile.am  Makefile.in  bfs.c  compconnexes  compconnexes.c  distance.c  distance.sh  plot  plot.c  twitter-RT-skel.deg
tp2/: M2GRI - TP2 - Rapport.odt  Makefile  config.status  configure  configure.ac
tp2/autom4te.cache/: output.1  requests  traces.0  traces.1
tp2/src/: Makefile  Makefile.am  Makefile.in  cc_uf  cc_uf.c  exercice2.sh  graph-ph.d  graph.c  graph.d  ph  ph.c  prep_data  prep_for_plot.sh  pretreatment.sh  queue.c  queue.h  test.sh  twitter-RT-er.txt  twitter-RT-mc.txt  twitter-RT-skel.txt
tp2/src/.deps/: cc_uf.Po  ph.Po  prep_data.Po  prepare_cc_uf.Po  queue.Po
tp2/src/ph-results/: comments-no-loop  comments-no-loop.d  flickr-ph.d  phone  phone-ph.d  phone-skel.d  phone.d  plot.sh  twitter-RT-skel  twitter-RT-skel-ph.d  twitter-RT-skel.d  twitter-mentions-skel-ph.d  twitter-mentions-skel.d  week  week-ph.d  week.d
tp3/src/: Makefile  Makefile.am  Makefile.in  bool.h  communaute.c  data  graph.c  graph.h  prep_data.c
tp4/: configuration.sh  configure.ac
tp4/src/: er.c  mc.c
(+3 files in other folders)
